# t-test-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/ai-test-officer/: SKILL.md
.codex/: config.toml
.github/workflows/: ci.yml
agents-sdk-agent/src/ai_test_officer/: __init__.py  agent_summary.py  batch.py  cli.py  env.py  events.py  git_tools.py  live_server.py  models.py  notify.py  planner.py  redaction.py  release_gate.py  replay_gate.py  report.py  report_site.py  runner.py  safety.py  safety_smoke.py  showcase_doctor.py  workspace.py
agents-sdk-agent/tests/: test_agent_planner.py  test_agent_summary.py  test_agent_tools.py  test_batch.py  test_build_mr_replays.py  test_cli.py  test_context.py  test_decision_context.py  test_demo.py  test_events.py  test_failure.py  test_gongfeng.py  test_live_server.py  test_memory.py  test_notify.py  test_planner.py  test_prompts.py  test_release_gate.py  test_replay_gate.py  test_report_html.py  test_report_site.py  test_runner.py  test_safety.py  test_safety_smoke.py  test_showcase_doctor.py  test_structure.py
codex-agent/: ARCHIVE.md
config/: mcporter.json
docs/: architecture.md  codex-sdk-notes.md  competition-requirements.md  fue-report-hosting.md  internal-integrations.md  作品提交材料.md  复现说明.md  官网提交填写清单.md  比赛展示说明.md  部署.md
docs/dev-issues/: README.md
examples/: sample_pr_diff.txt
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: competition-replay.spec.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
plans/: competition-final-optimization-plan-for-approval.md  competition-optimization-plan.md  detailed-execution-plan-for-approval.md  phase-1-delivery-cleanup.md
scripts/: build_mr_replays.py  competition_check.sh  create_scenario_a_demo.py  create_scenario_demos.py  showcase_agent_loop.sh  showcase_release_guard.sh
src/ai_test_officer/: __init__.py  cli.py  codex_runner.py  demo_scenarios.py  doctor.py  git_diff.py  models.py  prompts.py  report.py  scenario_runner.py  visualizer.py  wecom_bot.py
tests/: test_cli.py  test_codex_runner.py  test_doctor.py  test_git_diff.py  test_prompt.py  test_report.py  test_scenario_runner.py  test_visualizer.py  test_wecom_bot.py
(+50 files in other folders)
