[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t-test-agent"
version = "0.1.0"
description = "AI Test Officer MVP powered by the OpenAI Agents SDK."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "0awei0" }]
dependencies = ["openai-agents"]

[project.optional-dependencies]
e2e = ["playwright>=1.53"]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[project.scripts]
ai-test-officer = "ai_test_officer.cli:main"

[tool.setuptools.packages.find]
where = ["agents-sdk-agent/src"]

[tool.setuptools.package-data]
"ai_test_officer.prompts" = ["*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
required-version = "0.11.25"
prerelease = "allow"
